tests/NormalTests/paczka1/fuzzy1/68822148.err
Error in line 2: qRD A492 42,3
Error in line 13: u01EETz9fsL A402 2,3
Error in line 12: A402 A696 35,9
Error in line 15: u01EETz9fsL A696 65,2
Error in line 4: whUu A696 56,5
Error in line 21: whUu A492 81,8
Error in line 29: qRD A492 8,4
Error in line 33: T0GL S790 1,4
